--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -298,7 +298,23 @@ img.img-fluid {
           </div>
       <% }) %>
   </div>
-  
+  <br>
+  <br>
+
+  </div>
+ 
+  <h3 class="tittle-w3layouts my-lg-4 my-4">Trending </h3>
+  <div class="container-fluid">
+    <div>
+      <img src="/img/nike-just-do-it (5).jpeg"  class="col-12 col-md-12 col-lg-12 pt-2 pb-3">
+    </div>
+    <h1 class="col-sl-6 col-md-8 col-lg-12 row justify-content-center text-center"> <strong>VOMORO ROAM</strong></h1>
+    <h6 class="small_text_top">Form meets function with the weatherised Vomero Roam—an all-season staple that delivers a comfortable stride and keeps you ready for whatever, no matter the weather.</h6>
+    <div class="d-flex justify-content-center">
+      <a href="">
+          <button type="submit" class="btn btn-black btn-lg" style="width: 120px; border-radius: 25px;">Shop Now</button>
+      </a>
+  </div>
         <h3 class="tittle-w3layouts my-lg-4 my-4">New Arrivals for you </h3>
 
       <div class="row">
