--- a/views/user/checkout-page.ejs
+++ b/views/user/checkout-page.ejs
@@ -213,7 +213,7 @@
 </div>
 
 
-<!-- <script>
+ <script>
     function handleAddressChange(event) {
         // Prevent form submission if "add-new" is selected
         event.preventDefault();
@@ -222,7 +222,7 @@
             window.location.href = '/user/add-new-address';
         }
     }
-</script> -->
+</script>
 
 
                     <div class="coupon-selection">
