--- a/views/user/payment-page.ejs
+++ b/views/user/payment-page.ejs
@@ -42,7 +42,7 @@
     <section class="banner-bottom-wthreelayouts py-lg-5 py-3">
         <div class="container">
             <div class="inner-sec-shop px-lg-4 px-3">
-                <h3 class="tittle-w3layouts my-lg-4 mt-3">Payment </h3>
+                <h3 class="tittle-nikelayout my-lg-4 mt-3">Payment </h3>
                 <div class="responsive_tabs">
                     <div id="horizontalTab">
                        
