--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -43,7 +43,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<section class="banner-bottom-wthreelayouts py-lg-5 py-3">
 			<div class="container-fluid">
 				<div class="inner-sec-shop px-lg-4 px-3">
-					<h3 class="tittle-w3layouts my-lg-4 mt-3">New Arrivals for you </h3>
+					<h3 class="tittle-nikelayout my-lg-4 mt-3">New Arrivals for you </h3>
 					<div class="row">
 						<!-- product left -->
 						<div class="side-bar col-lg-3">
