--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -71,7 +71,7 @@ body {
         <nav class="sticky-top">
             <ul class="menu-aside">
                 <li class="menu-item">
-                    <a class="menu-link" href="/admin"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link" href="/admin/dashboard"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
@@ -106,10 +106,10 @@ body {
                     <a class="menu-link" href="/admin/coupons"> <i class="icon material-icons md-class"></i>
                         <span class="text">Coupon</span> </a>
                 </li>
-                <li class="menu-item">
+                <!-- <li class="menu-item">
                     <a class="menu-link" href="/admin/banner"> <i class="icon material-icons md-photo_size_select_actual"></i>
                         <span class="text">Banner</span> </a>
-                </li>
+                </li> -->
 
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/orders"> <i class="icon material-icons md-shopping_cart"></i>
