--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -1,7 +1,7 @@
 <!--footer -->
 <footer class="py-lg-5 py-3">
     <div class="container-fluid px-lg-5 px-3">
-        <div class="row footer-top-w3layouts">
+        <div class="row footer-top-nikelayout">
             <div class="col-lg-3 footer-grid-w3ls">
                 <div class="footer-title">
                     <h3>About Us</h3>
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="copyright-w3layouts mt-4">
+        <div class="copyright-nikelayout mt-4">
             <p class="copy-right text-center ">&copy; 2024 Nike. All Rights Reserved | Clone website Designed for learning purpose only.
             
             </p>
