--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -56,29 +56,31 @@
 <!-- header -->
 <header>
     <div class="rowfront">
-        <div class="col-lg-3 col-md-3">
+    
+        
+        <div class="col-lg-3 col-md-3 col-sm-1">
             <div class="header__logo">
                 <a href="/">
                     <img src="/img/nike top logo.svg" alt="Nike logos" class="img-fluids">
                 </a>
             </div>
         </div>
-        <div class="col-md-6 top-info-cart text-right mt-lg-6">
+        <div class="col-md-6 col-sm- text-right mt-lg-6 ">
             <ul class="cart-inner-info">
-                <li class="nikecart nikecart2 cart cart box_1"> 
+                <li class="nikecart nikecart2 cart cart box_1 d-none d-md-block"> 
                    
                     <a href="/findastore" class="top_nike_cart" style="color: black;">
                         Find a Store   
                     </a>
                 
             </li>
-            <li class="nikecart nikecart2 cart cart box_1 " > 
+            <li class="nikecart nikecart2 cart cart box_1 d-none d-md-block " > 
                    
-                <a href="/help" class="top_nike_cart" style="color: black;">
+                <a href="/help" class="top_nike_cart " style="color: black;">
                     Help </a>
             
         </li>
-                <li class="nikecart nikecart2 cart cart box_1" > 
+                <li class="nikecart nikecart2 cart cart box_1 d-none d-md-block" > 
                    
                     <a href="/join" class="nav-link" style="color: black;">
                         Join US 
@@ -120,15 +122,35 @@
                 </a>
             </div>
         </div>
+       
         <div class="col-md-2 top-info-cart text-right mt-lg-1">
+            
             <ul class="cart-inner-info">
              
-
+                <div class=" col-lg-1 text-right mt-lg-1">
+                    <button id="trigger-overlay" type="button">
+                        <i class="fas fa-search"></i>
+                    </button>
+                </div>
+                <!-- open/close -->
+                <div class="overlay overlay-door">
+                    <button type="button" class="overlay-close">
+                        <i class="fa fa-times" aria-hidden="true"></i>
+                    </button>
+                    <form id="searchForm" action="/shop" method="get" class="d-flex">
+                        <input id="searchInput" class="form-control" type="search" name="searchQuery" placeholder="Search here..." required="">
+                        <button type="submit" class="btn btn-primary submit">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </form>
+                    
+        
+                </div>
                  
                 <li class="nikecart nikecart2 cart cart box_1"> 
                     <% if (locals.user) { %>
                         <a href="/cart" class="top_nike_cart">
-                            My Cart 
+                            
                             <i class="fas fa-cart-arrow-down"></i>
                             <span class="cart-count <%= (locals.user.cart && locals.user.cart.items && locals.user.cart.items.length > 0) ? 'visible' : 'hidden' %>">
                                 <%= locals.user.cart?.items?.length || 0 %>
@@ -151,39 +173,18 @@
         </div>
     
     </div>
-    <div class="search">
-        <div class="mobile-nav-button">
-            <button id="trigger-overlay" type="button">
-                <i class="fas fa-search"></i>
-            </button>
-        </div>
-        <!-- open/close -->
-        <div class="overlay overlay-door">
-            <button type="button" class="overlay-close">
-                <i class="fa fa-times" aria-hidden="true"></i>
-            </button>
-            <form id="searchForm" action="/shop" method="get" class="d-flex">
-                <input id="searchInput" class="form-control" type="search" name="searchQuery" placeholder="Search here..." required="">
-                <button type="submit" class="btn btn-primary submit">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>
-            
-
-        </div>
+    
         <!-- open/close -->
     <!-- </div> -->
     <label class="top-log mx-auto"></label>
     <nav class="navbar navbar-expand-lg navbar-light bg-light top-header mb-2">
-
-        <button class="navbar-toggler mx-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon">
-                
-            </span>
+            <span class="navbar-toggler-icon"></span>
         </button>
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-mega mx-auto">
+            <ul class="navbar-nav nav-mega mx-auto ml-auto text-lg-right">
                 <li class="nav-item active">
                     <a class="nav-link ml-lg-0" href="/">Home
                         <span class="sr-only">(current)</span>
@@ -192,22 +193,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
-              
                 <li class="nav-item">
                     <a class="nav-link" href="/shop" id="navbarDropdown1" role="button" aria-haspopup="true" aria-expanded="false">
                         Shop
                     </a>
                 </li>
-             
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
                 </li>
-              
             </ul>
         </div>
-        
     </nav>
+    
     </div>
 
 </header>
