--- a/views/user/single.ejs
+++ b/views/user/single.ejs
@@ -33,6 +33,21 @@
 		<link href="//fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800"
 			rel="stylesheet">
 			<style>
+				/* Set the color of the filled stars to yellow */
+.stars .fa-star {
+  color: rgb(0, 0, 0);
+}
+
+/* Optionally, set the half-filled stars to a lighter yellow or gray */
+.stars .fa-star-half-o {
+  color: #000000; /* A lighter yellow or different shade */
+}
+
+/* Set the empty stars to gray or another color */
+.stars .fa-star-o {
+  color: #585454; /* Gray color for empty stars */
+}
+
 				.cart-popup {
 					position: absolute;
 					top: 70px;
