--- a/views/user/payment-page.ejs
+++ b/views/user/payment-page.ejs
@@ -30,7 +30,7 @@
             <div class="inner_breadcrumb">
                 <ul class="short">
                     <li>
-                        <a href="/home">Home</a>
+                        <a href="/">Home</a>
                         <i>|</i>
                     </li>
                     <li>Payment </li>
