--- a/views/user/single.ejs
+++ b/views/user/single.ejs
@@ -244,10 +244,22 @@
 									<div class="resp-tabs-container">
 										<!--/tab_one-->
 										<div class="tab1">
-											<div class="single_page">
-												<h3  style="font-size: 15px;"><%= product.description %>.</h3>
+											<div class="single_page2 mb-3">
+												<p style="color: black; font-size: 18px;" ><%= product.description %>.</p>
 												<p></p>
 											</div>
+											<h4 class="mt-30" style="font-weight: bold;">Delivery & Returns</h4>
+                                        <hr class="wp-block-separator is-style-wide">
+                                        <p style="color: black; font-size: 20px;">All purchases are subject to delivery fees.
+
+											Standard delivery 4–9 business days
+											Orders are processed and delivered Monday–Friday (excluding public holidays)
+											
+											
+											Nike Members enjoy free returns.
+                                        </p>
+                                        <p>Upload your photo or mention @Nike on Instagram for a chance to be featured.
+                                        </p>
 										</div>
 										<!--//tab_one-->
 										
