--- a/views/partials/admin/header.ejs
+++ b/views/partials/admin/header.ejs
@@ -106,10 +106,10 @@ body {
                     <a class="menu-link" href="/admin/coupons"> <i class="icon material-icons md-class"></i>
                         <span class="text">Coupon</span> </a>
                 </li>
-                <!-- <li class="menu-item">
-                    <a class="menu-link" href="/admin/banner"> <i class="icon material-icons md-photo_size_select_actual"></i>
-                        <span class="text">Banner</span> </a>
-                </li> -->
+                <li class="menu-item">
+                    <a class="menu-link" href="/admin/referral-offer"> <i class="icon material-icons md-share"></i>
+                        <span class="text">Refferal Offer</span> </a>
+                </li>
 
                 <li class="menu-item">
                     <a class="menu-link" href="/admin/orders"> <i class="icon material-icons md-shopping_cart"></i>
