--- a/views/partials/user/footer.ejs
+++ b/views/partials/user/footer.ejs
@@ -34,7 +34,7 @@
                 </div>
                 <ul class="links">
                     <li>
-                        <a href="/home">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
                         <a href="/about">About</a>
