--- a/views/partials/user/header.ejs
+++ b/views/partials/user/header.ejs
@@ -155,6 +155,7 @@
     /* Dropdown container */
     .dropdown {
         position: relative;
+       min-width: 160px;
         /* Position relative to its normal position */
         display: inline-block;
         /* Make it an inline element */
@@ -163,6 +164,7 @@
     /* Dropdown content - initially hidden */
     .dropdown-content {
         display: none;
+        padding-right: 0px;
         /* Hide the dropdown content by default */
         position: absolute;
         background-color: #f9f9f9;
@@ -186,7 +188,10 @@
     /* Style the links inside the dropdown */
     .dropdown-content a {
         color: black;
-        padding: 12px 16px;
+        font-size: 16px;
+   
+        padding-right: 25px;
+        /* padding: 12px 16px; */
         text-decoration: none;
         display: block;
     }
@@ -210,16 +215,16 @@
             <div class=" ">
                 <ul class="cart-inner-info">
                     <li class="nikecart nikecart2 cart cart box_1 d-none d-md-block">
-                        <a href="/findastore" class="top_nike_cart" style="color: black;">
+                        <a href="#" class="top_nike_cart" style="color: black; font-weight: bold;">
                             Find a Store
                         </a>
                     </li>
                     <li class="nikecart nikecart2 cart cart box_1 d-none d-md-block ">
-                        <a href="/help" class="top_nike_cart " style="color: black;">
+                        <a href="#" class="top_nike_cart " style="color: black;font-weight: bold;">
                             Help </a>
                     </li>
                     <li class="nikecart nikecart2 cart cart box_1 d-none d-md-block">
-                        <a href="/join" class="nav-link" style="color: black;">
+                        <a href="#" class="nav-link" style="color: black; font-weight: bold;">
                             Join US
                         </a>
                     </li>
@@ -227,7 +232,7 @@
                     <% if (locals.user) { %>
                         <li class="button-log">
                             <div class="dropdown">
-                                <a href="#" class="sign-in-link">
+                                <a href="#" class="sign-in-link pt-1 pr-2" style="font-weight: bold;">
                                     <%= locals.user.name %>
                                 </a>
                                 <div class="dropdown-content">
@@ -239,9 +244,9 @@
                         </li>
 
                         <% } else { %>
-                            <li class="button-log">
-                                <a href="/signup" class="sign-in-link">Sign Up</a>
-                                <a href="/login" class="sign-in-link">Log In</a>
+                            <li class="button-log pr-4">
+                                <a href="/signup" class="sign-in-link" style="font-weight: bold;">Sign Up</a>
+                                <a href="/login" class="sign-in-link" style="font-weight: bold;">Log In</a>
                             </li>
                             <% } %>
                 </ul>
@@ -367,7 +372,7 @@
                         </button>
                     </div>
 
-                    <li class="nikecart nikecart2 cart cart box_1 d-block d-lg-none ml-auto">
+                    <li class="nikecart nikecart2 cart cart box_1 d-block d-lg-none ml-auto ">
                         <% if (locals.user) { %>
                             <a href="/cart" class="top_nike_cart">
 
@@ -453,10 +458,10 @@
 
 
     </div>
-    <div class="header1 pb-1 mb-4">
+    <div class="header1 pb-1 mb-5">
         <div class="container2 text-center">
-            <P class="pt-2" style="font-size: 13px; ">New Styles On Sale: Up To 40% Off Shop All Our New Markdowns</P>
-          
+            <P class="pt-2" style="font-size: 20px; font-weight: bold;  ">New Styles On Sale: Up To 40% Off </P>
+            <p class="hi" style="font-size: 12px; font-weight: bold; font-style: italic;">Shop All Our New Markdowns</p>
         </div>
     </div>
 
