bug fix ,change password in user side added

--- a/views/partials/user/sidebar.ejs
+++ b/views/partials/user/sidebar.ejs
@@ -32,10 +32,10 @@
                     <i class="fas fa-list"></i>
                     <a href="/user/my-order">My orders</a>
                 </div>
-                <div class="sidebar-item">
+                <!-- <div class="sidebar-item">
                     <i class="fas fa-clock"></i>
                     <a href="/user/my-coupons">Coupon</a>
-                </div>
+                </div> -->
                 <div class="sidebar-item">
                     <i class="fas fa-shopping-cart"></i>
                     <a href="/cart">Shopping Cart</a>
