--- a/views/user/single.ejs
+++ b/views/user/single.ejs
@@ -558,7 +558,7 @@
 		</script> -->
 		<!--// end-smoth-scrolling -->
 	
-	
+
 			<script src="/js/bootstrap.js"></script>
 			<!-- js file -->
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -717,3 +717,10 @@ document.addEventListener('DOMContentLoaded', function() {
 		}
 	</script>
 		<%-include("../../views/partials/user/footer")%>
+		<script src="js/jquery-2.2.3.min.js"></script>
+        <!-- newsletter modal -->
+        <!--search jQuery-->
+        <script src="js/modernizr-2.6.2.min.js"></script>
+        <script src="js/classie-search.js"></script>
+        <script src="js/demo1-search.js"></script>
+		
