--- a/views/user/user-profile.ejs
+++ b/views/user/user-profile.ejs
@@ -57,5 +57,12 @@
     </div>
     
     <%- include("../../views/partials/user/footer") %>
+    	<!--jQuery-->
+		<script src="js/jquery-2.2.3.min.js"></script>
+		<!-- newsletter modal -->
+		<!--search jQuery-->
+		<script src="js/modernizr-2.6.2.min.js"></script>
+		<script src="js/classie-search.js"></script>
+		<script src="js/demo1-search.js"></script>
   </div>
   
