--- a/views/user/forget-password.ejs
+++ b/views/user/forget-password.ejs
@@ -16,17 +16,29 @@
    <div class="card mx-auto card-login col-4">
        <div class="card-body">
            <h4 class="card-title mb-4">Email</h4>
+           <% if (user ) { %>
            <form method="post" action="/login/forget-password/forget-email-valid" onsubmit="return validateLoginForm()">
                <div class="mb-3">
-                   <input class="form-control" name="email" placeholder="Email" type="text" id="email">
+                   <input class="form-control" name="email" placeholder="Email" type="text" id="email"  value="<%= user.email %>">
                    <div class="error-message" id="email-error"></div>
                </div>
                <div class="mb-4">
                    <button type="submit" class="btn btn-primary w-100">Verify</button>
                </div>
            </form>
-         
-           <p class="text-center mb-4">Don't have an account? <a href="/signup">Sign up</a></p>
+           <% } else { %>
+            <form method="post" action="/login/forget-password/forget-email-valid" onsubmit="return validateLoginForm()">
+                <div class="mb-3">
+                    <input class="form-control" name="email" placeholder="Email" type="text" id="email" >
+                    <div class="error-message" id="email-error"></div>
+                </div>
+                <div class="mb-4">
+                    <button type="submit" class="btn btn-primary w-100">Verify</button>
+                </div>
+            </form>
+        
+            <p class="text-center mb-4">Don't have an account? <a href="/signup">Sign up</a></p>
+            <% } %>
        </div>
    </div>
 </section>
