--- a/views/user/my-order.ejs
+++ b/views/user/my-order.ejs
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <title>Order Page</title> -->
+  <title>Nike. Just Do It.Nike IN</title>
+  <link rel="icon" href="/img/favicon.ico" type="image/png" sizes="32x32">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     .order-item {
@@ -111,15 +112,15 @@
                     <p class="mb-0">Color: <%= item.product.color %></p>
                   </div>
                   <div class="col-md-2">
-                    <p class="font-weight-bold mb-0">Price: $<%= item.regularPrice %></p>
+                    <p class="font-weight-bold mb-0">Price: ₹<%= item.regularPrice %></p>
                     <p class="mb-0">Quantity: <%= item.quantity %></p>
-                    <p class="mb-0">Total: $<%= (item.regularPrice * item.quantity).toFixed(2) %></p>
+                    <p class="mb-0">Total: ₹<%= (item.regularPrice * item.quantity).toFixed(2) %></p>
                     
                     <!-- SaledPrice section underneath -->
                     <div class="mt-2" style="background-color: #f8d7da; padding: 8px; border-radius: 5px;">
-                      <p class="font-weight-bold text-success mb-0">Sale Price: $<%= item.saledPrice.toFixed(2) %></p>
-                      <p class="text-success mb-0"> Total Discount: $<%= ((item.regularPrice * item.quantity) -  (item.saledPrice * item.quantity)).toFixed(2) %></p>
-                      <p class="text-success mb-0">Saled Total: $<%= (item.saledPrice * item.quantity).toFixed(2) %></p>
+                      <p class="font-weight-bold text-success mb-0">Sale Price: ₹<%= item.saledPrice.toFixed(2) %></p>
+                      <p class="text-success mb-0"> Total Discount: ₹<%= ((item.regularPrice * item.quantity) -  (item.saledPrice * item.quantity)).toFixed(2) %></p>
+                      <p class="text-success mb-0">Saled Total: ₹<%= (item.saledPrice * item.quantity).toFixed(2) %></p>
                      
                     </div>
                   </div>
