--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -148,16 +148,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 														</script>
 														<div class="grid-price mt-2">
 														  <% if (product.offerPrice && product.offerPrice < product.salePrice) { %>
-															<span class="" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
-															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">$<%= product.offerPrice %></span>
+															<span class="" style="text-decoration: line-through;">₹<%= product.regularPrice %></span>
+															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">₹<%= product.offerPrice %></span>
 														  <% } else if (product.salePrice < product.regularPrice) { %>
-															<span class="" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
-															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">$<%= product.salePrice %></span>
+															<span class="" style="text-decoration: line-through;">₹<%= product.regularPrice %></span>
+															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">₹<%= product.salePrice %></span>
 														  <% } else if (product.salePrice === product.regularPrice && product.offerPrice && product.offerPrice < product.salePrice) { %>
-															<span class="" style="text-decoration: line-through;">$<%= product.regularPrice %></span>
-															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">$<%= product.offerPrice %></span>
+															<span class="" style="text-decoration: line-through;">₹<%= product.regularPrice %></span>
+															<span class="" style="color: rgb(0, 0, 0); font-weight: bold;">₹<%= product.offerPrice %></span>
 														  <% } else { %>
-															<span class="">$<%= product.regularPrice %></span>
+															<span class="">₹<%= product.regularPrice %></span>
 														  <% } %>
 														</div>
 													  </div>
